<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/select_item_text"
        android:title="Select items to delete or add tags"
        />
</menu>
