...
        android:inputType="date"
        android:maxLength="10"
        android:textSize="16sp"
        android:visibility="gone"
        android:digits="1234567890/"
        app:layout_constraintBottom_toTopOf="@+id/invalid_date_message"
        app:layout_constraintEnd_toStartOf="@+id/date_filter_button"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/filter_date_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ListView
...
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/light_green"
        android:contentDescription="@string/sort_readable"
        android:foregroundTint="@color/dark_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filter_popup"
        app:layout_constraintTop_toTopOf="@+id/main_activity_bottom_bar"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
        app:tint="@color/dark_green" />

    <Button
        android:id="@+id/sort_order_button"
...
