<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit_item"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="Edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete_item"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="Delete"
        app:showAsAction="always" />
</menu>